Retoque del footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -105,7 +105,7 @@
           </div>
         </div>
         <div class="seven wide column">
-
+          <h4 class="ui inverted header"> </h4>
           <p class="text">{{ site.description }}</p>
         </div>
       </div>
