--- a/_includes/header.html
+++ b/_includes/header.html
@@ -26,14 +26,15 @@
 
 </header>
 -->
-<header class="ui stackable inverted menu">
-    <a href="{{ site.baseurl }}/" class="item"><i class="home icon"></i></a>
-    <a href="{{ site.baseurl }}/" class="item"><h3>{{ site.title }}</h3></a>
-      <div class="right menu">
-          {% for page in site.pages %}
-            {% if page.title %}
-            <a class="item" href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a>
-            {% endif %}
-          {% endfor %}
-      </div>
-</header>
+<nav class="ui fixed menu inverted navbar">
+  <a href="{{ site.baseurl }}/" class="brand item"><h3>{{ site.title }}</h3></a>
+  <div class="right menu">
+    {% for page in site.pages %}
+      {% if page.title %}
+      <a class="item" href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a>
+      {% endif %}
+    {% endfor %}
+  </div>
+</nav>
+<br/>
+<br/>
