--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,6 +7,9 @@ comments: true
   <header class="post-header">
     <h1 class="post-title">{{ page.title }}</h1>
     <p class="post-meta">{{ page.date | date: "%b %-d, %Y" }}{% if page.author %} • {{ page.author }}{% endif %}{% if page.meta %} • {{ page.meta }}{% endif %}</p>
+    {% for categorie in page.categories %}
+      <a class="ui mini grey tag label">{{ categorie }}</a>
+    {% endfor %}
   </header>
 
   <article class="post-content">
