--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -70,7 +70,7 @@
           </div>
         </div>
         <div class="five wide column">
-          <h4 class="ui inverted header">Encuentrame en:</h4>
+          <h4 class="ui inverted header">Sigueme en:</h4>
           <div class="ui inverted link list">
             <ul class="social-media-list">
               <li>
