--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -55,7 +55,8 @@
 
 </footer>
 -->
-<footer>
+
+<footer class="site-wrapper">
 <div class="ui inverted vertical footer segment">
     <div class="ui center aligned container">
       <div class="ui stackable inverted divided grid">
