--- a/_includes/head.html
+++ b/_includes/head.html
@@ -15,6 +15,6 @@
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}" />
 
   <script type="text/javascript" src="{{ "/dist/semantic.min.js" | prepend: site.baseurl }}"></script>
-  <script type="text/javascript" src="{{ "/dist/script.js" | prepend: site.baseurl }}"></script>
+  <script type="text/javascript" src="{{ "/dist/jekyll-search.js" | prepend: site.baseurl }}"></script>
 
 </head>
