--- a/_includes/searcher.html
+++ b/_includes/searcher.html
@@ -2,9 +2,9 @@
   <input id="search-input" class="prompt" type="text" placeholder="Search...">
   <i class="search icon"></i>
 </div>
-<div id="results-container" class="ui list">
+
   <nav class="ui menu navbar searcher">
     <div class="right menu">
-
+      <div id="results-container" class="ui list"></div>
     </div>
   </nav>
