--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,12 +6,13 @@
   <body>
 
     {% include header.html %}
-    
+
     <div class="page-content">
       <div class="wrapper">
         {{ content }}
       </div>
     </div>
+    {% include google_analytics.html %}
 
     {% include footer.html %}
 
