--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,13 +1,17 @@
 
+
 <nav class="ui fixed menu inverted navbar">
   <a href="{{ site.baseurl }}/" class="brand item"><h3>{{ site.title }}</h3></a>
   <div class="right menu">
 
+    <a class="item" href="{{ "/acerca" | prepend: site.baseurl }}">Acerca</a>
+    <!--
     {% for page in site.pages %}
       {% if page.title %}
       <a class="item" href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a>
       {% endif %}
     {% endfor %}
+    -->
   </div>
 </nav>
 
