--- a/_includes/head.html
+++ b/_includes/head.html
@@ -12,10 +12,12 @@
 
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}" />
-  
+
   <!-- JS -->
   <script type="text/javascript" src="{{ "/dist/semantic.min.js" | prepend: site.baseurl }}"></script>
   <script type="text/javascript" src="{{ "/dist/jekyll-search.js" | prepend: site.baseurl }}"></script>
 
-
+  <!-- Angular -->
+  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular.min.js"></script>
+  <script type="text/javascript" src="{{ "/dist/app/app.js" | prepend: site.baseurl }}"></script>
 </head>
